RESOLVED FIXED175960
Fix build breakage with Public iOS 11 SDK
https://bugs.webkit.org/show_bug.cgi?id=175960
Summary Fix build breakage with Public iOS 11 SDK
Jonathan Bedard
Reported 2017-08-24 15:57:34 PDT
Currently, there are some build issues when building tip of tree WebKit with the public iOS 11 SDK.
Attachments
Patch (2.43 KB, patch)
2017-08-24 16:05 PDT, Jonathan Bedard
no flags
Patch (4.34 KB, patch)
2017-08-24 16:47 PDT, Jonathan Bedard
no flags
Radar WebKit Bug Importer
Comment 1 2017-08-24 15:58:02 PDT
Jonathan Bedard
Comment 2 2017-08-24 16:05:49 PDT
Wenson Hsieh
Comment 3 2017-08-24 16:09:32 PDT
Comment on attachment 319032 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319032&action=review > Tools/TestWebKitAPI/ios/DataInteractionSimulator.h:93 > +@interface UIItemProvider : NSItemProvider <UIKit/NSItemProvider+UIKitAdditions.h> appears to be public in the latest SDK, and that defines preferredPresentationSize on NSItemProvider (which UIItemProvider subclasses). Can we just import that header instead?
Jonathan Bedard
Comment 4 2017-08-24 16:15:34 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 319032 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=319032&action=review > > > Tools/TestWebKitAPI/ios/DataInteractionSimulator.h:93 > > +@interface UIItemProvider : NSItemProvider > > <UIKit/NSItemProvider+UIKitAdditions.h> appears to be public in the latest > SDK, and that defines preferredPresentationSize on NSItemProvider (which > UIItemProvider subclasses). Can we just import that header instead? Then we need to change that in UIKitSPI.h as well.
Wenson Hsieh
Comment 5 2017-08-24 16:44:58 PDT
(In reply to Jonathan Bedard from comment #4) > (In reply to Wenson Hsieh from comment #3) > > Comment on attachment 319032 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=319032&action=review > > > > > Tools/TestWebKitAPI/ios/DataInteractionSimulator.h:93 > > > +@interface UIItemProvider : NSItemProvider > > > > <UIKit/NSItemProvider+UIKitAdditions.h> appears to be public in the latest > > SDK, and that defines preferredPresentationSize on NSItemProvider (which > > UIItemProvider subclasses). Can we just import that header instead? > > Then we need to change that in UIKitSPI.h as well. Yep, that would be ideal!
Jonathan Bedard
Comment 6 2017-08-24 16:47:32 PDT
WebKit Commit Bot
Comment 7 2017-08-25 08:27:25 PDT
Comment on attachment 319035 [details] Patch Clearing flags on attachment: 319035 Committed r221187: <http://trac.webkit.org/changeset/221187>
WebKit Commit Bot
Comment 8 2017-08-25 08:27:26 PDT
All reviewed patches have been landed. Closing bug.
Jonathan Bedard
Comment 9 2017-08-25 11:55:12 PDT
Note You need to log in before you can comment on or make changes to this bug.