Fix build breakage with Public iOS 11 SDK https://bugs.webkit.org/show_bug.cgi?id=175960 <rdar://problem/34069264>

Reviewed by Wenson Hsieh.

Source/WebCore/PAL:

* pal/spi/ios/UIKitSPI.h: Use NSItemProvider definition of preferredPresentationSize
instead of re-declaring it.

Source/WebKit:

* Platform/spi/ios/UIKitSPI.h: Add UIURLDragPreviewView declaration.

Tools:

* TestWebKitAPI/ios/DataInteractionSimulator.h: Add UIItemProvider declaration.


Canonical link: https://commits.webkit.org/192635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221187 268f45cc-cd09-0410-ab3c-d52691b4dbfc